Comments for .scss

--- a/src/template/styles/typography/_mixins.scss
+++ b/src/template/styles/typography/_mixins.scss
@@ -1,3 +1,5 @@
+/* @/template/styles/typography/_mixins.scss */
+
 @mixin Typeface($family, $weight) {
   font-family: $family;
   font-weight: $weight;
