--- a/src/configs/ui/_typography.scss
+++ b/src/configs/ui/_typography.scss
@@ -1,3 +1,5 @@
+/* @/configs/ui/_typography.scss */
+
 @import "@/assets/font/archivo.css";
 @import "@/assets/font/inter.css";
 @import "@/assets/font/JetBrainsMono.css";
