--- a/src/template/ui/components/NavBar_Editorial/_style.scss
+++ b/src/template/ui/components/NavBar_Editorial/_style.scss
@@ -4,6 +4,9 @@
   display: flex;
   align-items: center;
 
+  ul { padding: 0; }
+  li { list-style: none; }
+
   .nav-logo svg {
     path { fill: var(--OnBackground); }
   }
