--- a/src/template/styles/frame/layouts/_app.scss
+++ b/src/template/styles/frame/layouts/_app.scss
@@ -1,30 +1,16 @@
 /* @/template/styles/fra,e/_layout.scss */
 
-// =========================
-// ========= LAYOUT OVERVIEW
+.layout--editorial, .layout--editorial #app {
+  width: 100%; height: 100%;
+}
 .layout--app #app {
+  display: flex;
+
   #nav-bar-app {}
   #view {
     header#main-actions {}
     main#somename-main {}
     footer#other-actions {}
-  }
-}
-
-
-
-.layout--app, .layout--app #app {
-  // LOCK SCROLLS FOR APP CONTAINER
-  height: 100%;
-  overflow: hidden;
-}
-
-.layout--app #app {
-  #view {
-    width: 100%; height: 100%;
-    overflow: hidden;
-    position: relative;
-    gap: 0 0;
   }
 }
 
