--- a/src/template/ui/components/NavBar_Editorial/_style.scss
+++ b/src/template/ui/components/NavBar_Editorial/_style.scss
@@ -1,160 +1,114 @@
-/* atoms/NavBar */
+/* components/NavBar_Editorial */
 
 #nav-bar-editorial {
+  position: absolute;
+  width: 100%;
+  height: var(--nav-bar-height);
+  padding: 0;
+  
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+
+  header {
+    z-index: 0;
+    display: flex;
+    flex-direction: row;
+    gap: var(--nav-bar-header-gap);
+    height: 100%
+  }
+
+  @include PlateBorderWidth(0);
+  @include PlatePlaneColor(--Surface, 100);
+}
+
+#nav-bar-editorial header {
   font-size: 0;
 
-  ul { padding: 0; }
-  li { list-style: none; }
-
   .nav-logo svg {
+    width: 160rem;
+    height: 100%;
     path { fill: var(--OnBackground); }
   }
-  .nav-wrapper {
-    display: flex;
-    position: relative;
-  }
-  .preference-wrapper {
-    display: flex;
+
+  nav {
     flex-grow: 1;
-    align-items: flex-end;
-    padding-bottom: 4rem;
+    height: 100%;
+    ul {
+      height: 100%;
+      display: flex;
+      flex-direction: row;
+      padding: 0;
+      li { list-style: none; }
+    }
   }
-  @include PlateBorderWidth(0);
-  @include PlatePlaneColor(--Background, 100);
-}
 
+  #nav-links { gap: var(--nav-bar-links-gap);}
+  #nav-categories { gap: var(--nav-bar-categories-gap);}
 
+  .search-box {
+    width: var(--nav-bar-search-width);
+    height: 100%;
 
-
-.scale--XXL #nav-bar-editorial {
-  flex-direction: column;
-  padding: 8rem 0;
-  gap: 12rem;
-  
-  .nav-logo, svg {
-    width: 72rem; height: 72rem;
-  }
-  .nav-wrapper{
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
-    gap: 12rem;
-    padding: 0 8rem;
+    // FOR TEST
+    font-size: 16rem;
   }
 }
 
 
 
-.scale--XL #nav-bar-editorial {
-  flex-direction: column;
-  padding: 8rem 0;
-  gap: 8rem;
-  
-  .nav-logo, svg {
-    width: 66rem; height: 66rem;
-  }
-  .nav-wrapper{
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
-    gap: 10rem;
-    padding: 0 7rem;
-  }
-}
-
-
-
+.scale--XXL #nav-bar-editorial,
+.scale--XL #nav-bar-editorial,
 .scale--L #nav-bar-editorial {
-  flex-direction: column;
-  padding: 8rem 0;
-  gap: 8rem;
-  
-  .nav-logo, svg {
-    width: 64rem; height: 64rem;
-  }
-  .nav-wrapper{
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
-    gap: 8rem;
-    padding: 0 6rem;
+
+  --nav-bar-height: 74rem;
+  --nav-bar-search-width: 300rem;
+  --nav-bar-header-gap: 36rem;
+  --nav-bar-links-gap: 30rem;
+  --nav-bar-categories-gap: 20rem;
+  header { 
+    width: 1280rem; 
   }
 }
 
 
 
 .scale--M #nav-bar-editorial {
-  flex-direction: column;
-  padding: 8rem 0;
-  gap: 8rem;
-  
-  .nav-logo, svg {
-    width: 62rem; height: 62rem;
-  }
-  .nav-wrapper{
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
-    gap: 8rem;
-    padding: 0 4rem;
+
+  padding: 0 40rem;
+  --nav-bar-height: 74rem;
+  --nav-bar-search-width: 300rem;
+  --nav-bar-header-gap: 36rem;
+  --nav-bar-links-gap: 30rem;
+  header { 
+    width: 100%
   }
 }
 
 
 
 .scale--S #nav-bar-editorial {
-  .nav-wrapper{
-    width: 100%;
-    flex-direction: row;
-    justify-content: center;
-    gap: 20rem;
-    padding: 6rem;
-    padding-bottom: calc(env(safe-area-inset-bottom) + 6rem);
+
+  padding: 0 30rem;
+  --nav-bar-height: 74rem;
+  --nav-bar-search-width: 220rem;
+  --nav-bar-header-gap: 28rem;
+  --nav-bar-links-gap: 28rem;
+  header { 
+    width: 100%
   }
 }
 
 
-
-.scale--XS #nav-bar-editorial {
-
-  .nav-wrapper {
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 6rem 0rem;
-    padding-bottom: calc(env(safe-area-inset-bottom) + 6rem);
-    align-items: stretch;
-  }
-  .nav-wrapper:first-child::before {
-    content: " "; display: block;
-    width: 0px; height: 1px;
-  }
-  .nav-wrapper:nth-last-child(2)::after {
-    content: " "; display: block;
-    width: 0px; height: 1px;
-  }
-}
-
-
-
+.scale--XS #nav-bar-editorial,
 .scale--XXS #nav-bar-editorial {
 
-  .nav-wrapper{
+  padding: 0 26rem;
+  --nav-bar-height: 40rem;
+  header { 
+    width: 100%
+  }
+  .nav-logo, .nav-logo svg {
     width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 6rem 0rem;
-    padding-bottom: calc(env(safe-area-inset-bottom) + 6rem);
-    align-items: stretch;
-  }
-  .nav-wrapper:first-child::before {
-    content: " "; display: block;
-    width: 0px; height: 1px;
-  }
-  .nav-wrapper:nth-last-child(2)::after {
-    content: " "; display: block;
-    width: 0px; height: 1px;
   }
 }
