[MOD] Redefined SCSS system : using @extend

--- a/src/configs/template/_typography.scss
+++ b/src/configs/template/_typography.scss
@@ -1,5 +1,4 @@
 /* @/configs/ui/_typography.scss */
-
 @import "@/assets/font/archivo.css";
 @import "@/assets/font/inter.css";
 @import "@/assets/font/JetBrainsMono.css";
@@ -26,11 +25,15 @@ $headerSizes: 48, 32, 28, 24, 20, 16;
 
 
 @include Body("Inter", 16, 22, "",   0, 480, 340, 620);
+@include Body("Inter", 15, 20, "",   0, 480, 340, 620);
 @include Body("Inter", 14, 20, "",   0, 480, 340, 620);
+@include Body("Inter", 13, 18, "", 0.5, 480, 340, 620);
 @include Body("Inter", 12, 18, "", 0.5, 480, 340, 620);
+@include Body("Inter", 11, 16, "", 0.5, 480, 340, 620);
 @include Body("Inter", 10, 16, "", 0.5, 480, 340, 620);
+@include Body("Inter",  9, 12, "", 0.5, 480, 340, 620);
 @include Body("Inter",  8, 12, "", 0.5, 480, 340, 620);
-$bodySizes: 16, 14, 12, 10, 8;
+$bodySizes: 16, 15, 14, 13, 12, 11, 10, 9, 8;
 @each $size in $bodySizes {
   .typo-body-#{$size} {
     word-wrap:break-word;
