--- a/src/template/ui/blocks/NavBarLink/_underlined.scss
+++ b/src/template/ui/blocks/NavBarLink/_underlined.scss
@@ -1,48 +1,32 @@
-
 #app .nav-bar-link.--underlined {
-  display: block;
-  position: relative;
-  height: 100%;
+  @include PlateTransition(120);
 
-  @include PlatePlaneColor(--Primary, 0);
-}
-#app .nav-bar-link.--underlined .contents {
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  gap: 5rem;
-  align-content: center;
-  align-items: center;
+  @include PlateBackgroundOpacity(0);
 
-  color: var(--OnSurface);
-  opacity: 0.74;
-  .nav-handle { padding-top: 1rem; }
-}
-
-
-#app .nav-bar-link.--underlined {
-  .plate .border {
-    border-bottom: 2px solid var(--OnSurface);
-    opacity: 0;
-    transition: 120ms;
-  }
-}
-#app .nav-bar-link.router-link-active.--underlined 
-{
-  .contents {
-    color: var(--Primary);
-    opacity: 1;
-  }
-  .plate .border {
-    border-bottom: 2px solid var(--Primary);
-  }
+  @include PlateBorderBottom(2);
+  @include PlateBorderColor(--OnSurface);
+  @include PlateBorderOpacity(0);
 }
 #app .nav-bar-link.--underlined:hover {
+  @include PlateBorderOpacity(1);
+}
+
+
+#app .nav-bar-link.--underlined .contents {
+  margin: 0 3rem;
+  color: var(--OnSurface);
+  opacity: 0.74;
+}
+#app .nav-bar-link.--underlined:hover .contents {
+  opacity: 1;
+}
+
+#app .nav-bar-link.--underlined.router-link-active 
+{
+  @include PlateBorderColor(--Primary);
+  @include PlateBorderOpacity(1);
   .contents {
-    opacity: 1;
-  }
-  .plate .border {
-    border-bottom: 2px solid var(--OnSurface);
+    color: var(--Primary);
     opacity: 1;
   }
 }
