--- a/src/template/ui/components/StatusBar/_style.scss
+++ b/src/template/ui/components/StatusBar/_style.scss
@@ -10,8 +10,8 @@
     flex-shrink: 0;
   }
 
-  @include PlateBorderWidth(0);
-  @include PlatePlaneColor(--Background, 100);
+  @include PlateBackgroundColor(--Background);
+  @include PlateBackgroundOpacity(1);
 }
 
 .scale--XXL #status-bar{
