--- a/src/template/styles/layouts/_editorial.scss
+++ b/src/template/styles/layouts/_editorial.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
 
-  #nav-bar-editorial { 
+  #nav-bar-horizon-links { 
     flex-shrink: unset;
     z-index: 100;
   }
