--- a/src/template/main.scss
+++ b/src/template/main.scss
@@ -1,4 +1,5 @@
 @import './styles/**/*.scss';
-@import './ui/**/*.scss';
+@import './atoms/**/*.scss';
+@import './components/**/*.scss';
 
 @import '../configs/**/*.scss';
