--- a/src/template/styles/layouts/_app.scss
+++ b/src/template/styles/layouts/_app.scss
@@ -1,6 +1,7 @@
-/* @/template/styles/fra,e/_layout.scss */
+/* @/template/styles/layout/_app.scss */
 
-.layout--editorial, .layout--editorial #app {
+
+.layout--app, .layout--app #app {
   width: 100%; height: 100%;
 }
 .layout--app #app {
