--- a/src/template/styles/layouts/_editorial.scss
+++ b/src/template/styles/layouts/_editorial.scss
@@ -1,19 +1,21 @@
-/* @/template/styles/fra,e/_layout.scss */
+/* @/template/styles/layout/_editorial.scss */
 
 // =========================
 // ========= LAYOUT OVERVIEW
 .layout--editorial #app {
   display: flex;
   flex-direction: column;
+  height: fit-content;
 
-  #nav-bar-horizon-links { 
+  #navigation { 
     flex-shrink: unset;
     z-index: 100;
   }
   #router-page { 
     flex-grow: 1;
-    z-index: 10;
-    padding-top: var(--nav-bar-height);
+    z-index: 0;
+    // padding-top: var(--nav-bar-height);
+    // padding-bottom: var(--nav-bar-height);
   }
   #dev-status-bar { 
     flex-shrink: unset; 
