Custom Component Injection for NavBar_HorizonLinks

--- a/src/template/components/RouterLink_VstackNest/_base.scss
+++ b/src/template/components/RouterLink_VstackNest/_base.scss
@@ -18,6 +18,11 @@
   }
 }
 
+// Disable Nest Parent Link
+#app .router-link-vstack-nest.--expanded-major, #app .router-link-vstack-nest.--shrinked-major {
+  pointer-events: none;
+}
+
 
 // TYPOGRAPHY --------------------
 
