--- a/src/template/main.scss
+++ b/src/template/main.scss
@@ -1,5 +1,8 @@
 @import './styles/**/*.scss';
+
 @import './atoms/**/*.scss';
 @import './components/**/*.scss';
 
 @import '../configs/**/*.scss';
+
+@import '../customComponents/**/*.scss';
