--- a/src/template/components/NavBar_HorizonLinks/_style.scss
+++ b/src/template/components/NavBar_HorizonLinks/_style.scss
@@ -5,19 +5,22 @@
   top: 0;
 
   width: 100%;
-  height: var(--nav-bar-height);
+  // height: var(--nav-bar-height);
+  height: fit-content;
   padding: 0;
   
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   header {
     z-index: 0;
     display: flex;
     flex-direction: row;
     gap: var(--nav-bar-header-gap);
-    height: 100%
+    // height: 100%
+    height: var(--nav-bar-height);
   }
 
   @include PlateBackgroundColor(--Surface);
@@ -83,7 +86,7 @@
 .scale--S {
 
   --nav-bar-height: 74rem;
-  --nav-bar-search-width: 220rem;
+  --nav-bar-search-width: 160rem;
   --nav-bar-header-gap: 28rem;
   --router-link-vstack-nests-gap: 28rem;
 }
@@ -114,13 +117,13 @@
 
 .scale--M #app .nav-bar-horizon-links {
 
-  padding: 0 40rem;
   --nav-bar-height: 74rem;
   --nav-bar-search-width: 300rem;
   --nav-bar-header-gap: 36rem;
   --router-link-vstack-nests-gap: 30rem;
   header { 
-    width: 100%
+    padding: 0 40rem;
+    width: 100%;
   }
 }
 
@@ -128,13 +131,13 @@
 
 .scale--S #app .nav-bar-horizon-links {
 
-  padding: 0 30rem;
   --nav-bar-height: 74rem;
   --nav-bar-search-width: 80rem;
   --nav-bar-header-gap: 28rem;
   --router-link-vstack-nests-gap: 28rem;
   header { 
-    width: 100%
+    padding: 0 30rem;
+    width: 100%;
   }
 }
 
@@ -142,10 +145,10 @@
 .scale--XS #app .nav-bar-horizon-links,
 .scale--XXS #app .nav-bar-horizon-links {
 
-  padding: 0 26rem;
   --nav-bar-height: 40rem;
   header { 
-    width: 100%
+    padding: 0 26rem;
+    width: 100%;
   }
   .nav-logo, .nav-logo svg {
     width: 100%;
