--- a/src/template/components/NavBar_HorizonLinks/_style.scss
+++ b/src/template/components/NavBar_HorizonLinks/_style.scss
@@ -25,6 +25,8 @@
 
   @include PlateBackgroundColor(--Surface);
   @include PlateBackgroundOpacity(1);
+
+  filter: drop-shadow(0px 0px 28px rgba(0, 0, 0, 0.05));
 }
 
 #app .nav-bar-horizon-links header {
