[NEW] Shadow Mixin

--- a/src/configs/styles/_colors.scss
+++ b/src/configs/styles/_colors.scss
@@ -11,6 +11,11 @@
   --Error: #df1125;
   --Warning: #e6b644;
   --Positive: #5ebc62;
+
+  --Shadow-1: rgba(0, 0, 0, 0.04);
+  --Shadow-2: rgba(0, 0, 0, 0.08);
+  --Shadow-3: rgba(0, 0, 0, 0.12);
+  --Shadow-4: rgba(0, 0, 0, 0.16);
 }
 
 .theme--default-dark {
@@ -24,6 +29,12 @@
   --Error: #df1125;
   --Warning: #e6b644;
   --Positive: #5ebc62;
+
+
+  --Shadow-1: rgba(0, 0, 0, 0.04);
+  --Shadow-2: rgba(0, 0, 0, 0.08);
+  --Shadow-3: rgba(0, 0, 0, 0.12);
+  --Shadow-4: rgba(0, 0, 0, 0.16);
 }
 
 
