--- a/src/template/components/NavBar_HorizonLinks/_style.scss
+++ b/src/template/components/NavBar_HorizonLinks/_style.scss
@@ -25,8 +25,7 @@
 
   @include PlateBackgroundColor(--Surface);
   @include PlateBackgroundOpacity(1);
-
-  filter: drop-shadow(0px 0px 28px rgba(0, 0, 0, 0.05));
+  @include Shadow-1(20rem);
 }
 
 #app .nav-bar-horizon-links header {
