--- a/src/configs/template/_overrideStyles.scss
+++ b/src/configs/template/_overrideStyles.scss
@@ -3,12 +3,17 @@
 
 
 
-/* NavBar_HorizonLinks */
 
+/* ---------------------------------------- */
+/* ---------------------------------------- */
+#NavBar_HorizonLinks {}
+
+#app {
+  // --nav-bar-horizon-links-bg-color: var(--Primary) !important;
+}
 .scale--XXL,
 .scale--XL,
 .scale--L {
-
   // --nav-bar-height: 100rem !important;
   // --nav-bar-search-width: 300rem !important;
   // --nav-bar-header-gap: 36rem !important;
@@ -16,14 +21,12 @@
   // --nav-bar-categories-gap: 20rem !important;
 
 } .scale--M {
-
   // --nav-bar-height: 74rem !important;
   // --nav-bar-search-width: 300rem !important;
   // --nav-bar-header-gap: 36rem !important;
   // --router-link-vstack-nests-gap: 30rem !important;
 
 } .scale--S {
-
   // --nav-bar-height: 74rem !important;
   // --nav-bar-search-width: 160rem !important;
   // --nav-bar-header-gap: 28rem !important;
@@ -31,7 +34,6 @@
 
 }.scale--XS,
 .scale--XXS {
-
   // --nav-bar-height: 40rem !important;
 }
 
@@ -39,6 +41,13 @@
 
 
 
+/* ---------------------------------------- */
+/* ---------------------------------------- */
+#RouterLink_VstackNest {}
+
+#app {
+  // --rlvn-nested-links-list-bg-color: var(--Primary) !important;
+}
 
 
 
