--- a/src/template/components/DevStatusBar/_style.scss
+++ b/src/template/components/DevStatusBar/_style.scss
@@ -12,7 +12,7 @@
     z-index: 20;
   }
 
-  @include PlateBackgroundColor(--Background);
+  @include PlateBackgroundColor(var(--Background));
   @include PlateBackgroundOpacity(1);
 
   .plate {
