--- a/src/template/components/NavBar_App/_style.scss
+++ b/src/template/components/NavBar_App/_style.scss
@@ -17,7 +17,7 @@
     align-items: flex-end;
     padding-bottom: 4rem;
   }
-  @include PlateBackgroundColor(--Background);
+  @include PlateBackgroundColor(var(--Background));
   @include PlateBackgroundOpacity(1);
 }
 
