--- a/src/template/components/RouterLink_VstackNest/_underlined.scss
+++ b/src/template/components/RouterLink_VstackNest/_underlined.scss
@@ -1,10 +1,10 @@
 #app .router-link-vstack-nest.--underlined {
-  @include PlateTransition(120);
+  @include PlateTransition(120ms);
 
   @include PlateBackgroundOpacity(0);
 
-  @include PlateBorderBottom(2);
-  @include PlateBorderColor(--OnSurface);
+  @include PlateBorderBottom(2rem);
+  @include PlateBorderColor(var(--OnSurface));
   @include PlateBorderOpacity(0);
 }
 #app .router-link-vstack-nest.--underlined:hover {
@@ -23,7 +23,7 @@
 
 #app .router-link-vstack-nest.--underlined.router-link-active 
 {
-  @include PlateBorderColor(--Primary);
+  @include PlateBorderColor(var(--Primary));
   @include PlateBorderOpacity(1);
   .contents {
     color: var(--Primary);
